--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <title>Excursion</title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <a href = "">Download Excursion (Coming soon!)</a>
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+      <a href = "">Download Excursion (Coming soon!)</a>
+      <p>
+        <video src = "./resources/videos/excursion.mp4">Video not supported</video>
+      </p>
+    </div>
+    <div>
+      <h2>Your personal travel guide</h2>
+      <h6>Excursion remembers places you like, and recommends new points of interest around you.</h6>
+      <p>
+        <img src = "https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg">
+      </p>
+    </div>
+    <div>
+      <p>
+        <img src = "https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png">
+      </p>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <a href = "">Download Excursion (Coming soon!)</a>
+      <h6>&copy; Excursion</h6>
+    </div>
   </body>
 </html>
