--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href = "./resources/css/style.css" type = "text/text/css" rel = "stylesheet">
+    <link href = "./resources/css/style.css" type = "text/css" rel = "stylesheet">
     <title>Excursion</title>
   </head>
   <body>
@@ -10,7 +10,7 @@
       <h1>Discover hidden places in the world around you</h1>
       <a href = "">Download Excursion (Coming soon!)</a>
       <p>
-        <video src = "./resources/videos/excursion.mp4">Video not supported</video>
+        <video loop autoplay src = "./resources/videos/excursion.mp4">Video not supported</video>
       </p>
     </div>
     <div>
@@ -26,7 +26,7 @@
       </p>
       <h2>Coming Soon for iPhone and Android</h2>
       <a href = "">Download Excursion (Coming soon!)</a>
-      <h6>&copy; Excursion</h6>
+      <h6 class = "copyright">&copy; Excursion</h6>
     </div>
   </body>
 </html>
